fix(frieeren/components): update time-align calendar ui

--- a/packages/frieeren-components/src/components/Calendar/Calendar.scss
+++ b/packages/frieeren-components/src/components/Calendar/Calendar.scss
@@ -1,22 +1,23 @@
 :root {
   --calendar-background: #fff;
 
-  --header-font-size: 16px;
+  --header-font-size: 20px;
   --header-font-color: #000000;
   --header-font-weight: 600;
 
   --tile-size: 40px;
-  --tile-font-size: 12px;
+  --tile-font-size: 14px;
   --tile-day-color: #000;
   --tile-day-background: #fff;
   --tile-day-hover-background: #f5f5f5;
   --tile-day-selected-background: #3a8dff;
   --tile-day-selected-color: #fff;
   --tile-day-selected-hover-background: #3a8dff;
-  --tile-day-weekend-color: #ff383c;
+  --tile-day-today-color: #3a8dff;
+  --tile-day-today-selected-color: #fff;
 
-  --tile-week-number-size: 20px;
-  --tile-week-number-color: #333;
+  --tile-week-number-size: 40px;
+  --tile-week-number-color: #64748b;
   --tile-week-number-background: #fff;
 
   // Range colors
@@ -55,13 +56,13 @@
   }
 
   &--header {
-    margin-bottom: 15px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 10px;
 
     &-title {
-      min-width: 100px;
+      min-width: 80px;
       text-align: center;
       font-size: var(--header-font-size);
       color: var(--header-font-color);
@@ -70,8 +71,8 @@
     }
 
     &-button {
-      width: 32px;
-      height: 32px;
+      width: 40px;
+      height: 40px;
       display: inline-flex;
       align-items: center;
       justify-content: center;
@@ -143,7 +144,15 @@
 
     &--disabled {
       pointer-events: none !important;
-      color: #ccc !important;
+      color: #b7c2d0 !important;
+    }
+
+    &--today {
+      color: var(--tile-day-today-color);
+
+      .calendar--tile--selected {
+        color: var(--tile-day-today-selected-color) !important;
+      }
     }
 
     &--selected {
@@ -161,15 +170,12 @@
     }
 
     &--other-month {
-      visibility: hidden;
-    }
+      pointer-events: none !important;
+      color: #b7c2d0 !important;
 
-    &--weekend {
-      color: var(--tile-day-weekend-color);
-    }
-
-    &--weekend.calendar--tile--selected {
-      color: var(--tile-day-selected-color);
+      .calendar--tile--only-view-month-days {
+        visibility: hidden;
+      }
     }
 
     &--in-range {
@@ -211,11 +217,6 @@
       &::before {
         display: none;
       }
-    }
-
-    &--weekend.calendar--tile--range-start,
-    &--weekend.calendar--tile--range-end {
-      color: var(--tile-range-start-color);
     }
   }
 }
